[gd_scene load_steps=7 format=3 uid="uid://iu0lr6xqjp3t"]

[ext_resource type="Script" uid="uid://ceevq763wdikp" path="res://scripts/main.gd" id="1_vcsgt"]
[ext_resource type="PackedScene" uid="uid://bifcqhfj4knfa" path="res://scenes/Mob.tscn" id="2_c01mt"]
[ext_resource type="Texture2D" uid="uid://cet6dr30f171p" path="res://assets/bg.png" id="3_nxtc6"]
[ext_resource type="PackedScene" uid="uid://dq8m7vo5cdnvk" path="res://scenes/Player.tscn" id="4_jlsqs"]
[ext_resource type="PackedScene" uid="uid://71h6n7yxiym5" path="res://scenes/HUD.tscn" id="5_q8u5g"]

[sub_resource type="Curve2D" id="Curve2D_glv2v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1920, 8, 0, 0, 0, 0, 1920, 1088, 0, 0, 0, 0, 8, 1080, 0, 0, 0, 0, 0, 8)
}
point_count = 6

[node name="Main" type="Node2D"]
script = ExtResource("1_vcsgt")
mob_scene = ExtResource("2_c01mt")

[node name="Background2" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = 1920.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_nxtc6")

[node name="Player" parent="." instance=ExtResource("4_jlsqs")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(576, 304)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_glv2v")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, 8)
rotation = -1.5707964

[node name="HUD" parent="." instance=ExtResource("5_q8u5g")]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
